<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Label[i]</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_menu_showHome">Voir le local</string>
    <string name="drawer_open">Options</string>
    <string name="drawer_close">Label[i]</string>
    <string name="menu_event_details_back">Précédent</string>
    <string name="fragment_connection_title">Accès à un compte</string>
    <string name="fragment_connection_login">Identifiant</string>
    <string name="fragment_connection_password">Mot de passe</string>
    <string name="fragment_connection_button">Connexion</string>
    <string name="fragment_presentation_presentation">Notre association a pour but de réunir 
        tous les étudiants en informatique présents à l\'université. 
        En leur proposant un cadre pour réaliser leurs projets, 
        nous espérons booster leur productivité et ainsi, leur donner de meilleures 
        chances pour leur vie après les études.</string>
    <string name="fragment_presentation_home">Nous aimons nous retrouver et 
        vous accueillir dans notre local, 
        dans le bâtiment A29. </string>
    <string name="fragment_presentation_price">Tous les étudiants intéressés par l\'informatique peuvent nous rejoindre.
		\nLes cotisations sont : 
		\n4€ pour les étudiants en première année
		\n8€ pour les étudiants en années supérieures</string>
    <string name="activity_project_details_picture_string">Image du projet</string>
    <string name="activity_team_details_picture_string">Image de l\'équipe</string>

    <string-array name="nav_drawer_not_connected">
        <item>L\'association</item>
        <item>News</item>
        <item>Projets</item>
        <item>Evénements</item>
        <item>Equipes</item>
        <item>Membres</item>
        <item>Paramètres</item>
        <item>Connexion</item>
    </string-array>
    <string-array name="nav_drawer_connected">
        <item>L\'association</item>
        <item>News</item>
        <item>Projets</item>
        <item>Evénements</item>
        <item>Equipes</item>
        <item>Membres</item>
        <item>Paramètres</item>
        <item>Votes</item>
        <item>Mon Profil</item>
        <item>Déconnexion</item>
    </string-array>

    <array name="nav_drawer_icons_not_connected">
        <item>@drawable/ic_action_help</item>
        <item>@drawable/ic_action_about</item>
        <item>@drawable/ic_action_computer</item>
        <item>@drawable/ic_action_time</item>
        <item>@drawable/ic_action_group</item>
        <item>@drawable/ic_action_person</item>
        <item>@drawable/ic_action_settings</item>
        <item>@drawable/ic_action_accounts</item>
    </array>
    <array name="nav_drawer_icons_connected">
        <item>@drawable/ic_action_help</item>
        <item>@drawable/ic_action_about</item>
        <item>@drawable/ic_action_computer</item>
        <item>@drawable/ic_action_time</item>
        <item>@drawable/ic_action_group</item>
        <item>@drawable/ic_action_person</item>
        <item>@drawable/ic_action_settings</item>
        <item>@drawable/ic_action_chat</item>
        <item>@drawable/ic_action_settings</item>
        <item>@drawable/ic_action_accounts</item>
    </array>

    <string-array name="project_type_array">
        <item>Type 0</item>
        <item>Type 1</item>
        <item>Type 2</item>
        <item>Type 3</item>
        <item>Type 4</item>
        <item>Type 5</item>
    </string-array>
    
    <string-array name="project_status_array">
        <item>Préparation</item>
        <item>En vote</item>
        <item>En cours</item>
        <item>Archivé</item>
    </string-array>

    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_member_details">Member</string>
    <string name="fragment_project_menu_addProject">Ajouter un projet</string>
    <string name="fragment_project_menu_refresh">Rafraîchir</string>
    <string name="activity_project_details_menu_refresh">Rafraîchir</string>
    <string name="activity_add_project_name">Nom</string>
    <string name="activity_add_project_type">Type</string>
    <string name="activity_add_project_author">Auteur</string>
    <string name="activity_add_project_title">Ajout d\'un projet</string>
    <string name="activity_add_project_button">Créer le projet</string>
    <string name="activity_project_details_edit">Editer le projet</string>
    <string name="activity_project_details_messages">Voir les messages</string>
    <string name="activity_edit_project_name">Nom</string>
    <string name="activity_edit_project_type">Type</string>
    <string name="activity_edit_project_description">Description</string>
    <string name="activity_edit_project_author">Auteur</string>
    <string name="activity_edit_project_status">Statut</string>
    <string name="activity_edit_project_title">Editer un projet</string>
    <string name="activity_edit_project_button">Editer le projet</string>
    <string name="activity_edit_project_image">Image</string>
    <string name="activity_edit_project_button_choose_image">Choisir une nouvelle image</string>
    <string name="hint_activity_messages_edit_text"><i>Entrez votre message …</i></string>
    <string name="activity_messages_dialog_item_title">Que faire ?</string>
    <string-array name="activity_messages_dialog_items">
        <item>Editer</item>
        <item>Supprimer</item>
    </string-array>
    <string name="activity_edit_message_title">Editer un message</string>
	<string name="activity_edit_message_button">Editer le message</string>
	<string name="hint_activity_edit_message_edit_text_content"><i>Composez le message …</i></string>
	<string name="fragment_member_menu_add_member">Ajouter un membre</string>
	<string name="fragment_member_menu_refresh">Rafraîchir</string>
	<string name="activity_add_member_title">Ajouter un membre</string>
	<string name="activity_add_member_first_name">Prénom</string>
	<string name="activity_add_member_last_name">Nom</string>
	<string name="activity_add_member_email">E-mail</string>
	<string name="activity_add_member_button">Valider</string>
	<string name="activity_edit_message_content">Message</string>
	<string name="fragment_member_edit_text_search_hint">Rechercher un membre …</string>
	<string name="activity_edit_member_title">Editer un membre</string>
	<string name="activity_edit_member_first_name">Prénom</string>
	<string name="activity_edit_member_last_name">Nom</string>
	<string name="activity_edit_member_email">E-Mail</string>
	<string name="activity_edit_member_level">Niveau</string>
	<string name="activity_edit_member_role">Rôle</string>
	<string name="activity_edit_member_button_choose_image">Choisir une nouvelle image</string>
	<string name="activity_edit_member_button">Valider</string>
	<string name="activity_edit_member_university_group">Groupe universitaire</string>
	<string name="activity_edit_member_website">Site Web</string>
	<string name="activity_edit_member_birthday">Anniversaire</string>
</resources>