<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:descendantFocusability="beforeDescendants"
    android:fillViewport="true"
    android:focusableInTouchMode="true"
    android:isScrollContainer="true"
    android:orientation="vertical"
    android:overScrollMode="always"
    android:scrollbarAlwaysDrawVerticalTrack="false"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/activity_edit_member_text_view_title"
            style="@style/text_view_activity_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_edit_member_title" />

        <LinearLayout
            style="@style/layout_with_text_components"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                style="@style/layout_one_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <com.iangclifton.android.floatlabel.FloatLabel
                    android:id="@+id/activity_edit_member_float_label_first_name"
                    style="@style/float_label_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_edit_member_first_name"
                    android:inputType="textCapSentences" />
            </LinearLayout>

            <LinearLayout
                style="@style/layout_one_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/activity_edit_member_text_view_last_name"
                    style="@style/text_view_field_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_edit_member_last_name" />

                <Spinner
                    android:id="@+id/activity_edit_member_spinner_type"
                    style="@style/component_under_text_view_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                style="@style/layout_one_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <com.iangclifton.android.floatlabel.FloatLabel
                    android:id="@+id/activity_edit_member_float_label_email"
                    style="@style/float_label_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_edit_member_email" />
            </LinearLayout>

            <LinearLayout
                style="@style/layout_one_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <com.iangclifton.android.floatlabel.FloatLabel
                    android:id="@+id/activity_edit_member_float_label_university_group"
                    style="@style/float_label_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_edit_member_university_group" />
            </LinearLayout>

            <LinearLayout
                style="@style/layout_one_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <com.iangclifton.android.floatlabel.FloatLabel
                    android:id="@+id/activity_edit_member_float_label_website"
                    style="@style/float_label_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_edit_member_website" />
            </LinearLayout>

            <LinearLayout
                style="@style/layout_one_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/activity_edit_member_text_view_level"
                    style="@style/text_view_field_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_edit_member_level" />

                <Spinner
                    android:id="@+id/activity_edit_member_spinner_status"
                    style="@style/component_under_text_view_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                style="@style/layout_one_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <com.iangclifton.android.floatlabel.FloatLabel
                    android:id="@+id/activity_edit_member_float_label_role"
                    style="@style/float_label_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_edit_member_role" />
            </LinearLayout>

            <LinearLayout
                style="@style/layout_one_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/activity_edit_member_button_choose_image"
                    style="@style/button_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/activity_edit_member_button_choose_image" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/layout_button_validate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/activity_edit_member_button_validate"
                style="@style/button_validate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/activity_edit_member_button" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>