<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/fragment_connection_text_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="30dp"
        android:paddingLeft="10dp"
        android:text="@string/fragment_connection_title"
        android:textSize="19sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/labeli_blue"
        android:orientation="vertical"
        android:padding="15dp"
        android:paddingTop="40dp" >

        <TextView
            android:id="@+id/fragment_connection_text_view_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/fragment_connection_login"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/fragment_connection_edit_text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/fragment_connection_text_view_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:text="@string/fragment_connection_password"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/fragment_connection_edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:paddingTop="40dp" >

        <Button
            android:id="@+id/fragment_connection_button_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/fragment_connection_button"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>