<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/activity_edit_message_text_view_title"
        style="@style/text_view_activity_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_edit_message_title" />

    <LinearLayout
        style="@style/layout_with_text_components"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/activity_edit_message_float_label_content"
            style="@style/float_label_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/activity_edit_message_content"
            android:inputType="textMultiLine|textCapSentences"
            android:layout="@layout/float_label_big" />
    </LinearLayout>

    <LinearLayout
        style="@style/layout_button_validate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/activity_edit_message_button_validate"
            style="@style/button_validate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/activity_edit_message_button" />
    </LinearLayout>

</LinearLayout>