<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:descendantFocusability="beforeDescendants"
    android:fillViewport="true"
    android:focusableInTouchMode="true"
    android:isScrollContainer="true"
    android:orientation="vertical"
    android:overScrollMode="always"
    android:scrollbarAlwaysDrawVerticalTrack="false"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/activity_add_project_text_view_title"
            style="@style/text_view_activity_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_add_project_title" />

        <LinearLayout
            style="@style/layout_with_text_components"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

           <LinearLayout
                style="@style/layout_one_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <com.iangclifton.android.floatlabel.FloatLabel
                    android:id="@+id/activity_add_project_float_label_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    style="@style/float_label_field"
                    android:hint="@string/activity_add_project_name" />
            </LinearLayout>

            <LinearLayout
                style="@style/layout_one_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/activity_add_project_text_view_type"
                    style="@style/text_view_field_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_add_project_type" />

                <Spinner
                    android:id="@+id/activity_add_project_spinner_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/component_under_text_view_field" />
            </LinearLayout>

            <LinearLayout
                style="@style/layout_one_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <com.iangclifton.android.floatlabel.FloatLabel
                    android:id="@+id/activity_add_project_float_label_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/float_label_field"
                    android:hint="@string/activity_add_project_author" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/layout_button_validate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/activity_add_project_button_validate"
                style="@style/button_validate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/activity_add_project_button" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>